Making sure it still works...

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1>PLEASE WORK</h1>
         If this doesn't work I may scream
         I... think it might work?
+        Making sure it still works...
     </body>
 </html>
