I honestly can't remember, I need to push these as soon as I make them lol

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <!-- Messel Collection -->
                     <div class = "item">
                         <h4>Messel Collection</h4>
-                        <b>NRFSSS Program</b>
+                        <b>NRFSSS/ISS Program</b>
                         <ul>
                             <li>
                                 Lecture Notes on an Introductory Course in Modern Physics
@@ -70,12 +70,8 @@
                                 Man In Inner and Outer Space
                                 <br><i>(1968)</i>
                             </li>
-                            <li>
-                                The Astronomer's Universe
-                                <br><i>Bok (1958)</i>
-                            </li>
                         </ul>
-                        <b>Misc. Messel/NRFSSS</b>
+                        <b>Misc. NRFSSS/ISS</b>
                         <ul>
                             <li>
                                 The Astronomer's Universe
@@ -91,10 +87,6 @@
                             <li>
                                 The Orbs Around Us
                                 <br><i>Proctor (1899)</i>
-                            </li>
-                            <li>
-                                Astronomy for Everyone
-                                <br><i>Newcomb (1926)</i>
                             </li>
                             <li>
                                 The Realm of the Nebulae
@@ -132,12 +124,20 @@
                                 <br><i>Butler (1795)</i>
                             </li>
                             <li>
+                                Scientific Dialogues
+                                <br><i>Joyce (1809)</i>
+                            </li>
+                            <li>
                                 The Young Gentleman's Book 
                                 <br><i>(1834)</i>
                             </li>
                             <li>
                                 Science for All
                                 <br><i>Brown (c1880)</i>
+                            </li>
+                            <li>
+                                The Popular Educator 
+                                <br><i>Cassell (c1880)</i>
                             </li>
                             <li>
                                 Journal of Researches
@@ -150,10 +150,6 @@
                             <li>
                                 Science Advances 
                                 <br><i>Haldane (1947)</i>
-                            </li>
-                            <li>
-                                Moments of Discovery (Vol. 1 + Vol. 2)
-                                <br><i>Bishop, Schwartz (1958)</i>
                             </li>
                             <li>
                                 Year Twelve 3 Unit Maths Course
@@ -190,8 +186,8 @@
                                     "I collect books to preserve knowledge and use it to inform both myself and others. When my astrophysics homework leaves me lost, I 
                                     have hundreds of years of background information to set me on the right path. When my young students bombard me with “why” in response 
                                     to whatever answer I give them, I am prepared to take them on a journey through decades of technological advancement. When the world is 
-                                    faced with uncertainty, I know I have the voices of thousands of academics, scientists, and researchers preserved in ink, and an internet 
-                                    connection through which to share them."
+                                    faced with uncertainty, I know I have the voices of thousands of academics, scientists, and researchers preserved in ink, and a voice 
+                                    with which to share them."
                                 </i>
                             </div>
                             <br>
