--- a/general-science-collection.html
+++ b/general-science-collection.html
@@ -38,41 +38,128 @@
                             Measures, with a Complete Collection of Arithmetical Tables, and Explanatory Remarks. For the
                             Use of Young Ladies.
                         </h2>
-                        <h4><i>1795 (Second, Elarged Edition)</i></h4>
+                        <h4><i>William Butler, 1795 (Second, Elarged Edition)</i></h4>
                     </div>
 
                     <div class = "textbox">
                         <p>
                             <b><i>Arithmetical Questions (Second, Enlarged Edition, 1795)</i></b> 
-                            is the oldest book in my collection, and one of my absolute favourites - although maths isn't my 
-                            main area of collection, this book is just such an amazing relic of the past.<br>
-                            To begin with the book itself, before I even start on the content, the covers are beautifully 
-                            marbled and still in quite great condition despite being 229 years old. The spine leather is a bit
-                            flaky, and the paper title is partially detached, but the wonderful people at Douglas Stewart Fine 
-                            Books made sure to preserve it in a plastic cover, which I will definitely adopt for some of my 
-                            other books. My favourite part about the aesthetics of this book, however, is the paper - the entire 
-                            book is written on a pale eggshell blue paper, something I had never seen nor heard of before. All
-                            pages are clean, with the exception of some doodles written in fountain pen, including an entire 
-                            question with a large X through it - I guess even 18th-century students got frustrated over their
-                            maths homework! Lastly, it wasn't until the turn of the 19th-century that the long s was phased out 
+                            is the oldest book in my collection, and one of my absolute favourites - although 
+                            maths isn't my main area of collection, this book is just such an amazing relic of 
+                            the past.<br>
+                            To begin with the book itself, before I even start on the content, the covers are 
+                            beautifully marbled and still in quite great condition despite being 229 years old. 
+                            The spine leather is a bit flaky, and the paper title is partially detached, but 
+                            the wonderful people at Douglas Stewart Fine Books made sure to preserve it in a 
+                            plastic cover, which I will definitely adopt for some of my other books. My 
+                            favourite part about the aesthetics of this book, however, is the paper - the 
+                            entire book is written on a pale eggshell blue paper, something I had never seen 
+                            nor heard of before. All pages are clean, with the exception of some doodles 
+                            written in fountain pen, including an entire question with a large X through it - 
+                            I guess even 18th-century students got frustrated over their maths homework! 
+                            Lastly, it wasn't until the turn of the 19th-century that the long s was phased out 
                             of typography, and thus trying to skim read the text gives one a headache:
-                            <i>"By the folar fyftem is meant the order and difpofition of the feveral heavenly bodies [...] 
-                            Thefe celeftial fpheres confift of planets and comets."</i>
-                            Of course, I can't replicate the true text on my modern laptop, but the long s is near 
-                            indistinguishable in print to the regular f. Imagine a word like selflessness - felfleffneff!
-                            <br>
-                            Okay, now on to the actual content - this book contains a range of problems on a range of topics, 
-                            from the Battle of Hastings, to Halley's Comet, to the price of stockings (something all women MUST 
-                            know!). I was very surprised as to the attitude the author took towards the education of women; 
-                            despite the views of the time, William Butler ("teacher of writing, accounts, and geography, in 
-                            ladies schools, and in private families") states the education of women as being "eminently
-                            conjucive to the welfare of a state". He does, however, go on to justify that claim by quoting 
-                            "[women] are only competent to form men"... lovely. Although Butler was heavily in support for the 
-                            education of women, he did so under the intent to provide young men with a higher quality of early
-                            education. But hey, it was a start!
+                            <i>"By the folar fyftem is meant the order and difpofition of the feveral heavenly 
+                                bodies [...] Thefe celeftial fpheres confift of planets and comets."</i>
+                            Of course, I can't replicate the true text on my modern laptop, but the long s is 
+                            near 
+                            indistinguishable in print to the regular f. Imagine a word like selflessness - 
+                            felfleffneff! <br>
+                            Okay, now on to the actual content - this book contains a range of problems on a 
+                            range of topics, from the Battle of Hastings, to Halley's Comet, to the price of 
+                            stockings (something all women MUST know!). I was very surprised as to the attitude 
+                            the author took towards the education of women; despite the views of the time, 
+                            William Butler ("teacher of writing, accounts, and geography, in ladies schools, 
+                            and in private families") states the education of women as being "eminently
+                            conjucive to the welfare of a state". He does, however, go on to justify that claim 
+                            by quoting "[women] are only competent to form men"... lovely. Although Butler was 
+                            heavily in support for the education of women, he did so under the intent to 
+                            provide young men with higher quality early education. But hey, it was a start!
                             <br>
                         </p>
                     </div>
+                    <div class = "quotebox">
+                        <p>
+                            Bibliography
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- SCIENTIFIC DIALOGUES -->
+        <div class = "main">
+            <div class = "column1">
+                <div class = "content">
+                  <div class = "imagebox">
+                      <img class = "expand-dong" src = "">
+                  </div>
+                  <div class = "imagebox">
+                      <img class = "expand-dong" src = "">
+                  </div>
+                </div>
+            </div>
+            <div class = "column2">
+                <div class = "content">
+                    <div class = "item">
+                        <h2>Scientific Dialogues, Intended for the Instruction and Entertainment of Young 
+                            People: in which the First Principles of Natural and Experimental Philosophy are 
+                            Explained. Vol. VI. of Electricity and Galvanism
+                        </h2>
+                        <h4><i>Rev. James Joyce, 1809 (New Edition)</i></h4>
+                    </div>
+                    <p>
+                        <b><i>Scientific Dialogues</i></b> is [ABOUT THE BOOK]
+                        
+                        This is actually a series I had previously considered for my collection, yet turned 
+                        down as it wasn't quite what I was after. However, after coming across this volume 
+                        (which predates the latter by four decades) while setting up a bookfair, I decided I 
+                        may as well take it home - it was free after all. Although missing its companion five 
+                        (maybe six) volumes, with its front cover barely hanging on, and covering my least
+                        favourite area of physics, I am very glad I did. It's unlike any of my other books, 
+                        explaining  
+                        <br>
+                    </p>
+                    <div class = "quotebox">
+                        <p>
+                            Bibliography
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- THE POPULAR EDUCATOR -->
+        <div class = "main">
+            <div class = "column1">
+                <div class = "content">
+                  <div class = "imagebox">
+                      <img class = "expand-dong" src = "">
+                  </div>
+                  <div class = "imagebox">
+                      <img class = "expand-dong" src = "">
+                  </div>
+                </div>
+            </div>
+            <div class = "column2">
+                <div class = "content">
+                    <div class = "item">
+                        <h2>Popular Educator [GET THE FULL NAME]
+                        </h2>
+                        <h4><i>Cassell [AND WHAT], c1880 (WHAT Edition)</i></h4>
+                    </div>
+                    <p>
+                        <b><i>Scientific Dialogues</i></b> is [ABOUT THE BOOK]
+                        
+                        This is actually a series I had previously considered for my collection, yet turned 
+                        down as it wasn't quite what I was after. However, after coming across this volume 
+                        (which predates the latter by four decades) while setting up a bookfair, I decided I 
+                        may as well take it home - it was free after all. Although missing its companion five 
+                        (maybe six) volumes, with its front cover barely hanging on, and covering my least
+                        favourite area of physics, I am very glad I did. It's unlike any of my other books, 
+                        explaining  
+                        <br>
+                    </p>
                     <div class = "quotebox">
                         <p>
                             Bibliography
@@ -99,7 +186,7 @@
                     <div class = "item">
                         <h2>The Young Gentleman's Book (Containing a Series of Choice Readings in Popular Science and 
                             Natural History)</h2>
-                        <h4><i>William Butler, 1834 (Second Edition)</i></h4>
+                        <h4><i>1834 (Second Edition)</i></h4>
                     </div>
                     <p>
                         <b><i>The Young Gentleman's Book Containing a Series of Choice Lectures in Popular History and 
@@ -243,24 +330,39 @@
                 </div>
             </div>
         </div>
-        <!-- Blank -->
+
+        <!-- BLANK TEMPLATE -->
+        <!--
         <div class = "main">
             <div class = "column1">
                 <div class = "content">
-                    <div class = "imagebox">
-                        <img class = "expand-dong" src = "">
-                    </div>
+                  <div class = "imagebox">
+                      <img class = "expand-dong" src = "">
+                  </div>
+                  <div class = "imagebox">
+                      <img class = "expand-dong" src = "">
+                  </div>
                 </div>
             </div>
             <div class = "column2">
                 <div class = "content">
                     <div class = "item">
-                        <h2></h2>
-                        <h4><i></i></h4>
+                        <h2>TITLE</h2>
+                        <h4><i>AUTHOR, YEAR</i></h4>
+                    </div>
+                    <p>
+                        <b><i>TITLE</i></b> is a book...
+                        <br>
+                    </p>
+                    <div class = "quotebox">
+                        <p>
+                            Bibliography
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
+        -->
 
         <!-- Home Button -->
         <br>
